--- a/config/crd/bases/druid.gardener.cloud_etcds.yaml
+++ b/config/crd/bases/druid.gardener.cloud_etcds.yaml
@@ -93,6 +93,28 @@ spec:
                   image:
                     description: Image defines the etcd container image and tag
                     type: string
+                  ownerCheck:
+                    description: OwnerCheck defines parameters related to checking if the seed is an owner of the shoot. The ownership can change during control plane migration.
+                    properties:
+                      dnsCacheTTL:
+                        description: DNSCacheTTL is the DNS cache TTL for owner checks.
+                        type: string
+                      id:
+                        description: ID is the seed ID value that is expected to be found in the owner DNS record.
+                        type: string
+                      interval:
+                        description: Interval is the time interval between owner checks.
+                        type: string
+                      name:
+                        description: Name is the domain name of the owner DNS record.
+                        type: string
+                      timeout:
+                        description: Timeout is the timeout for owner checks.
+                        type: string
+                    required:
+                    - id
+                    - name
+                    type: object
                   port:
                     description: Port define the port on which etcd-backup-restore server will exposed.
                     format: int32
